fix: wrap issue

--- a/themes/polk/source/css/_partial/archive.styl
+++ b/themes/polk/source/css/_partial/archive.styl
@@ -27,7 +27,8 @@
       }
 
       .post-title {
-        border-bottom: 1px dotted;
+        max-width: 700px;
+        display: inline-block;
 
         &:hover {
           border-bottom: 1px solid;
